<resources>

    <!--App-->
    <string name="app_name">Copenhagen Industries</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="maindrawer_devices">Devices</string>
    <string name="maindrawer_settings">Settings</string>
    <string name="maindrawer_help">Help</string>


    <!--Device List Elem-->
    <string name="devicelist_name">Device</string>
    <string name="devicelist_safe">Safe</string>

    <!--Add Device-->
    <string name="add_device_name">Device Name</string>
    <string name="add_device_mac">Mac Address</string>
    <string name="add_device">Add a device</string>


    <!--Known Devices-->
    <string name="known_devices_info1">You\'re not connected to any devices</string>
    <string name="known_devices_info2">Click the + icon to add a weapon via bluetooth</string>

    <!-- Preferences -->
    <string name="pref_pincode_title2">Change Your Pincode</string>
    <string name="pref_pincode_dialog">Type a 4 digit pincode</string>
    <string name="pref_pincode_summary">Click here to change your pincode</string>
    <string name="pref_pincode_title1">Pincode</string>
    <string name="pref_language_title1">Language</string>
    <string name="pref_language_title2">Choose Language</string>
    <string name="pref_language_dialog">Choose your language</string>
    <string name="pref_language_summary">Click here to change your languge</string>
    <string name="pref_homepage_title1">Homepage</string>
    <string name="pref_homepage_title2">Visit our website</string>
    <string name="pref_about_title1">About the app</string>
    <string name="pref_about_title2">Developpers of Conpenhagen Indsutries App</string>
    <string name="pref_about_devs" translatable="false">"Lasse A. Jensen(s165221)\nDuran Köse (s147153)\nJohan H. Sjursen(s154674)\nEmil B. Kristiansen(s165200)\nFrederik H. Lørup(s165249)\n"</string>
    <string name="pref_about_btn_ok" translatable="false">Ok</string>
    <string name="pref_key_language" translatable="false">language</string>
    <string name="pref_key_pincode" translatable="false">pincode</string>
    <string name="pref_key_dev" translatable="false">dev</string>
    <string name="pref_about_summary">The developpers</string>

    <!--Weapon Control-->
    <string name="weapon_control_name">Weapon Name</string>
    <string name="weapon_control_battery">Battery</string>
    <string name="weapon_control_oxygen">Oxygen</string>
    <string name="weapon_control_oxygen_level">Oxygen Level</string>
    <string name="weapon_control_propane">Propane</string>
    <string name="weapon_control_propane_level">Propane Level</string>
    <string name="weapon_control_mode">Mode</string>
    <string name="weapon_control_rate_of_fire">Rate of Fire</string>
    <string name="weapon_control_rof_number">1000</string>
    <string name="weapon_control_safe">Safe</string>
    <string name="weapon_control_start_editing">Start Editing</string>
    <string name="battery">Battery</string>
    <string name="oxygen" translatable="false">Oxygen</string>
    <string name="oxygen_default_value">Oxygen Level</string>
    <string name="propane">Propane</string>
    <string name="propane_default_value">Propane Level</string>
    <string name="mode">Mode</string>
    <string name="rate_of_fire">Rate of Fire</string>
    <string name="rate_of_fire_default_value" translatable="false">1000</string>
    <string name="edit">Edit</string>
    <string name="change_weapon_name">Change Weapon Name</string>
    <string name="change_rate_of_fire">Change Rate of Fire</string>
    <string name="delete">Delete</string>
    <string name="chance_the_rate_of_fire">Change the Rate of Fire</string>
    <string name="change_the_weapon_name">Change the weapon name</string>
    <string name="weapon_control_button_armed">Armed</string>
    <string name="weapon_control_button_safe">Safe</string>
    <string name="weapon_control_button_disconnected">Disconnected</string>
    <string name="weapon_control_connection_lost">Connection lost. \nCreate a new one?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="weapon_control_connecting">Connecting...</string>
    <string name="weapon_control_cancel">Cancel</string>
    <string name="toast_enable_bluetooth">Please enable bluetooth</string>
    <string name="weapon_control_user_input_ok" translatable="false">Ok</string>
    <string name="known_devices_unable_to_load_data">Unable to load data</string>
    <string name="known_devices_status_armed">Armed</string>
    <string name="known_devices_status_safe">Safe</string>
    <string name="known_devices_status_disconnected" translatable="false">DC</string>
    <string name="add_device_unable_to_fetch_list">Unable to fetch list</string>
    <string name="add_device_no_bt_adapter">NoBTAdapter</string>
    <string name="add_device_no_paired_devices_found">No Paired Bluetooth Devices Found.</string>
    <string name="custom_pin_activity_forgot_dialog_positive_text">Yes</string>
    <string name="custom_pin_activity_forgot_dialog_negative_text">No</string>
    <string name="main_activity_back_to_quit_app">Back to quit.</string>
    <string name="custom_pin_activity_forgot_dialog_content">Click here to enter app without pin</string>
    <string name="change_pin_wrong_password">Pincode is wrong - Unable to change pin</string>
    <string name="custom_pin_activity_forgot_dialog_title">Have you forgotten your PIN-code?</string>


    <!-- Help -->
    <!-- This gets translated by using another html file -->


    <!--Settings-->

</resources>
