<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_pincode_title1">


        <Preference android:title="@string/pref_pincode_title1"
            android:summary="@string/pref_pincode_summary"
            android:key="@string/pref_key_pincode">

        </Preference>


    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_language_title1">

        <ListPreference
            android:defaultValue="English"
            android:dialogTitle="@string/pref_language_dialog"
            android:entries="@array/language_entries"
            android:entryValues="@array/language_values"
            android:key="@string/pref_key_language"
            android:summary="@string/pref_language_summary"
            android:title="@string/pref_language_title2" />
        />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_homepage_title1">

        <Preference android:title="@string/pref_homepage_title2">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://cph.industries" />
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory android:title="About Us">

        <Preference
            android:title="The developpers"
            android:key="@string/pref_key_dev"
            >
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>