<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu1"
        android:actionLayout="@color/colorPrimary"
        android:title="@string/edit"
        android:visible="true"

        app:showAsAction="never">

        <menu>

            <item
                android:id="@+id/weapon_control_menu_edit_name"
                android:title="@string/change_weapon_name"></item>
            <item
                android:id="@+id/weapon_control_menu_edit_RoF"
                android:title="@string/change_rate_of_fire"></item>

        </menu>
    </item>
    <item
        android:id="@+id/weapon_control_delete_weapon"
        android:title="@string/delete" />

</menu>