<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.copenhagenindustries.bluetoothconnection.fragments.WeaponControlFragment"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp"
    android:id="@+id/weapon_control"
    >



    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:stretchColumns="*"
        android:id="@+id/tablelayout1">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            >

            <ImageView
                android:id="@+id/weapon_control_image_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/weapon"
                tools:ignore="ContentDescription" />



        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            >
            <TextView
                android:id="@+id/weapon_control_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:enabled="false"
                android:fontFamily="@font/aldrich"
                android:gravity="center"
                android:hint="@string/weapon_control_name"
                android:inputType="text"
                android:maxLength="25"
                android:text="@string/weapon_control_name"
                android:textColor="@android:color/white"
                android:textSize="18sp"

                />
        </TableRow>


    </TableLayout>
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"

        android:stretchColumns="*"
        android:layout_below="@+id/tablelayout1"
        android:id="@+id/tableLayout">




        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/filler1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/row_border"

            >

            <TextView
                android:id="@+id/weapon_control_battery_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"

                android:text="@string/weapon_control_battery"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                
                />

            <ImageView
                android:id="@+id/weapon_control_battery_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:layout_marginEnd="4dp"
                android:src="@drawable/battery4" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/row_border"
            >

            <TextView
                android:id="@+id/weapon_control_oxygen_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/weapon_control_oxygen"
                android:textSize="18sp"
                
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/weapon_control_oxygen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="end"
                android:text="@string/weapon_control_oxygen_level"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/weapon_control_propane_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weapon_control_propane"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                
                />

            <TextView
                android:id="@+id/weapon_control_propane"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weapon_control_propane_level"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:gravity="end"
                
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/filler2"
                android:layout_width="wrap_content"
                android:layout_height="40dp" />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/filler3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/row_border"
            >

            <TextView
                android:id="@+id/weapon_control_mode_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weapon_control_mode"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                />

            <ImageView
                android:id="@+id/weapon_control_mode_imageView"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:scaleType="fitEnd"
                android:minWidth="50dp"
                android:paddingRight="2dp"
                android:paddingBottom="2dp"
                android:src="@drawable/bullet_auto"

            />
        </TableRow>
        <TableRow>

            <TextView
                android:id="@+id/weapon_control_RoF_text"
                android:layout_width="74dp"
                android:layout_height="wrap_content"
                android:text="@string/weapon_control_rate_of_fire"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/weapon_control_RoF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:clickable="false"
                android:enabled="false"
                android:gravity="end"
                android:inputType="number"
                android:maxLength="10"
                android:text="@string/weapon_control_rof_number"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/weapon_control_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/weapon_control_safe"
        android:background="@drawable/safe"

        />


</RelativeLayout>
